--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 
-  <div *ngFor="let gif of resultados" class="col-md4 col-sm-6">
+  <div *ngFor="let gif of resultados" class="col-md4 col-sm-6 animate__animated animate__fadeIn animate_faster">
     <div class="card" style="width: 18rem;">
       <img [src]="gif.images.downsized_medium.url" class="card-image-top">
     <div class="card-body">
